--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,16 @@ svg {
   box-shadow: 0.25em 0.25em 0 0 var(--pri-color-dark);
   transition: rotate 0.25s ease-in-out;
 }
+
+.balloon-grid {
+  transition: opacity 250ms ease-in-out;
+  gap: 2em;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media only screen and (min-width: 800px) {
+  .balloon-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
